--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,12 +1,13 @@
-:root{
+:root {
   --color-primary: #4b4848b8;
-  --color-font-accent:#e08525eb;
+  --color-font-accent: #e08525eb;
   --color-minor: rgb(228, 228, 228);
   --color-outlines: rgb(228, 228, 228);
-  --color-accent:red;
+  --color-accent: red;
   --color-accent-light: #f36060;
-  --color-accent-transparent: rgba(243,96,96,0.7);
-  --color-font-light: rgba(0,0,0,0.6);
+  --color-accent-transparent: rgba(243, 96, 96, 0.7);
+  --color-font-light: rgba(0, 0, 0, 0.6);
+  --color-font-inversed: white;
 }
 
 
